<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:padding="16dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_text"
        android:textSize="18sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/edit_icon" />

    <TextView
        android:id="@+id/genre"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:text="@string/item_date"
        android:textSize="16sp" />

    <Switch
        android:id="@+id/switch_completed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

</LinearLayout>