<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_text"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/editBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:fontFamily="@font/fa_solid_900"
        android:text="@string/edit_icon"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/item_date"
        android:textColor="@color/blue"
        android:textSize="16sp"
        android:textStyle="bold"
        android:gravity="end" />

    <Switch
        android:id="@+id/switch_completed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

</LinearLayout>
